--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ BODY { behavior:url("js/csshover.htc");}
 
 <script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="js/jquery.sticky.js"></script>
-<script type="text/javascript" src="js/jquery.anythingslider.min.js"></script>
 <script type="text/javascript" src="js/my_script.js"></script>
 
 </head>
@@ -97,9 +96,9 @@ BODY { behavior:url("js/csshover.htc");}
 			</div>
 			
 			<ul>
-				<li class="first"><span>&nbsp;</span><a href="#">Доступно</a><p>Постоянный доступ к Сбербанку со смартфона <br />или планшета.</p></li>
-				<li class="second"><span>&nbsp;</span><a href="#">Быстро</a><p>Переводите деньги или оплачивайте счета <br />всего за несколько касаний.</p></li>
-				<li class="third"><span>&nbsp;</span><a href="#">Полезно</a><p>Находите ближайшие к вам банкоматы, <br />терминалы и банковские отделения.</p></li>
+				<li class="first"><span>&nbsp;</span><a class="msber02" href="#">Доступно</a><p>Постоянный доступ к Сбербанку со смартфона <br />или планшета.</p></li>
+				<li class="second"><span>&nbsp;</span><a class="msber02" href="#">Быстро</a><p>Переводите деньги или оплачивайте счета <br />всего за несколько касаний.</p></li>
+				<li class="third"><span>&nbsp;</span><a class="msber02" href="#">Полезно</a><p>Находите ближайшие к вам банкоматы, <br />терминалы и банковские отделения.</p></li>
 			</ul>
 			
 			<div class="btn-box">
@@ -111,12 +110,10 @@ BODY { behavior:url("js/csshover.htc");}
 		</div>
 		<div class="msber-box02-right">
 			
-			<ul id="slider1">
-				<li class="panel1"><img src="images/sber_img001.jpg" width="446" height="414" alt="#" /></li>
-				<li class="panel2"><img src="images/sber_img002.jpg" width="446" height="414" alt="#" /></li>
-				<li class="panel3"><img src="images/sber_img003.jpg" width="446" height="414" alt="#" /></li>
-				<li class="panel4"><img src="images/sber_img004.jpg" width="446" height="414" alt="#" /></li>
-			</ul>	
+			<div class="msber-box02-img"><img src="images/sber_img001.jpg" alt="#" /></div>
+			<div class="msber-box02-img"><img src="images/sber_img002.jpg" alt="#" /></div>
+			<div class="msber-box02-img"><img src="images/sber_img003.jpg" alt="#" /></div>
+			
 			
 		</div>
 	<div class="clear">&nbsp;</div>
