--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@ BODY { behavior:url("js/csshover.htc");}
 		</div>
 		<div class="msber-box02-right">
 			
-			<div class="msber-box02-img"><img src="images/sber_img001.jpg" alt="#" /></div>
-			<div class="msber-box02-img"><img src="images/sber_img002.jpg" alt="#" /></div>
-			<div class="msber-box02-img"><img src="images/sber_img003.jpg" alt="#" /></div>
-			
+			<div class="msber-box02-img-box">
+			<div class="msber-box02-img"><img src="images/sber_img001_1.gif" width="446" height="480" alt="#" /></div>
+			<div class="msber-box02-img"><img src="images/sber_img001_2.gif" width="446" height="480" alt="#" /></div>
+			<div class="msber-box02-img"><img src="images/sber_img001_3.gif" width="446" height="480" alt="#" /></div>
+			</div>
 			
 		</div>
 	<div class="clear">&nbsp;</div>
